--- a/mods/lmft.pw.toml
+++ b/mods/lmft.pw.toml
@@ -1,13 +1,13 @@
 name = "Load My F***ing Tags"
-filename = "lmft-1.1.0+1.21.9-fabric.jar"
+filename = "lmft-1.1.1+1.21.9-fabric.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/67kVxsaO/versions/uvoZP3eK/lmft-1.1.0%2B1.21.9-fabric.jar"
+url = "https://cdn.modrinth.com/data/67kVxsaO/versions/mn7K4mkS/lmft-1.1.1%2B1.21.9-fabric.jar"
 hash-format = "sha1"
-hash = "9b59c05e41ae71506a57319a18b06cd69ed0a12f"
+hash = "9ec52b054e91c7f0a0a37edd4b2a3832699135dc"
 
 [update]
 [update.modrinth]
 mod-id = "67kVxsaO"
-version = "uvoZP3eK"
+version = "mn7K4mkS"
