--- a/mods/raknetify.pw.toml
+++ b/mods/raknetify.pw.toml
@@ -1,16 +1,16 @@
 name = "Raknetify"
-filename = "raknetify-fabric-0.1.0+alpha.5.192-all.jar"
+filename = "raknetify-fabric-0.1.0+alpha.5.193-all.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/5IovSY3u/versions/CNXRQY6X/raknetify-fabric-0.1.0%2Balpha.5.192-all.jar"
+url = "https://cdn.modrinth.com/data/5IovSY3u/versions/f9xXpYw4/raknetify-fabric-0.1.0%2Balpha.5.193-all.jar"
 hash-format = "sha1"
-hash = "5708f15cef70e8f502d13531eb1cbfbe60d2d732"
+hash = "d5dc2e85352ec6a42a4765da4ba688c08f471133"
 
 [update]
 [update.modrinth]
 mod-id = "5IovSY3u"
-version = "CNXRQY6X"
+version = "f9xXpYw4"
 
 [option]
 optional = true
