Update distant horizons
Additions:
- MC 1.21.10 support
- Show API locked config options as disabled and 'API LOCK'
- Add global bandwidth setting
- Re-add biome blending

Changes:

- Replace the default LZMA compressor with ZSTD
    - This won't affect existing configs
    - This should reduce stuttering
- Replace pooled network buffers with unpooled
    - This is an attempt to fix monoliths in multiplayer
- Don't merge blocks that get colored by blocks above into columns
- Improve LOD load time slightly
- Move config UI buttons and descriptions closer together and right aligned
- Modify threading priorities to potentially spread out tasks better
- Improve chunk update queue speed
- Improve world gen task queue speed slightly
- Auto close compression streams to hopefully reduce native memory use
- Change delayed save cache logic to hopefully reduce the chance of monoliths
- Disable world gen progress message by default

--- a/mods/distanthorizons.pw.toml
+++ b/mods/distanthorizons.pw.toml
@@ -1,18 +1,18 @@
 name = "Distant Horizons"
-filename = "DistantHorizons-2.3.4-b-1.20.1-fabric-forge.jar"
+filename = "DistantHorizons-2.3.5-b-1.20.1-fabric-forge.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/uCdwusMi/versions/MhxUKxWI/DistantHorizons-2.3.4-b-1.20.1-fabric-forge.jar"
+url = "https://cdn.modrinth.com/data/uCdwusMi/versions/fKDD0aOG/DistantHorizons-2.3.5-b-1.20.1-fabric-forge.jar"
 hash-format = "sha1"
-hash = "fcbb4a39846af6d5cd41bc98405031f2010eef90"
+hash = "59c1cbc3d031f2aebe672a13b299b50eb1269292"
 
 [update]
 [update.modrinth]
 mod-id = "uCdwusMi"
-version = "MhxUKxWI"
+version = "fKDD0aOG"
 
 [option]
 optional = true
-default = true
 description = "lets you see chunks from very large distances using LODs"
+default = true
