--- a/mods/distanthorizons.pw.toml
+++ b/mods/distanthorizons.pw.toml
@@ -1,16 +1,16 @@
 name = "Distant Horizons"
-filename = "DistantHorizons-2.3.5-b-1.20.1-fabric-forge.jar"
+filename = "DistantHorizons-2.3.6-b-1.20.1-fabric-forge.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/uCdwusMi/versions/fKDD0aOG/DistantHorizons-2.3.5-b-1.20.1-fabric-forge.jar"
+url = "https://cdn.modrinth.com/data/uCdwusMi/versions/HSc151Xv/DistantHorizons-2.3.6-b-1.20.1-fabric-forge.jar"
 hash-format = "sha1"
-hash = "59c1cbc3d031f2aebe672a13b299b50eb1269292"
+hash = "89fd2d00de842579e41efa9fe6a87f67dd99a113"
 
 [update]
 [update.modrinth]
 mod-id = "uCdwusMi"
-version = "fKDD0aOG"
+version = "HSc151Xv"
 
 [option]
 optional = true
