--- a/mods/armourers-workshop.pw.toml
+++ b/mods/armourers-workshop.pw.toml
@@ -1,13 +1,13 @@
 name = "Armourer's Workshop"
-filename = "armourersworkshop-fabric-1.20.1-3.2.4-beta.jar"
+filename = "armourersworkshop-fabric-1.20.1-3.2.5-beta.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/y4JF3gXL/versions/bwCcttpd/armourersworkshop-fabric-1.20.1-3.2.4-beta.jar"
+url = "https://cdn.modrinth.com/data/y4JF3gXL/versions/q7o3XKPv/armourersworkshop-fabric-1.20.1-3.2.5-beta.jar"
 hash-format = "sha1"
-hash = "0bff7d69e7a56b243bf455b654003dd4a9a8d686"
+hash = "2cdb7cc0a1bc9e0927f09ddaf234a93ab33bd4fb"
 
 [update]
 [update.modrinth]
 mod-id = "y4JF3gXL"
-version = "bwCcttpd"
+version = "q7o3XKPv"
