--- a/mods/particle-rain.pw.toml
+++ b/mods/particle-rain.pw.toml
@@ -1,16 +1,16 @@
 name = "Particle Rain"
-filename = "particlerain-4.0.0-beta.2+1.20.1-fabric.jar"
+filename = "particlerain-4.0.0-beta.3+1.20.1-fabric.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/nrikgvxm/versions/pQkdl3xK/particlerain-4.0.0-beta.2%2B1.20.1-fabric.jar"
+url = "https://cdn.modrinth.com/data/nrikgvxm/versions/cGaEo5dv/particlerain-4.0.0-beta.3%2B1.20.1-fabric.jar"
 hash-format = "sha1"
-hash = "4917039a5918eb55069ae9ebdc3b30b2f3aa47e9"
+hash = "39e6421c02d65aa2509fa255f272de728df5eb74"
 
 [update]
 [update.modrinth]
 mod-id = "nrikgvxm"
-version = "pQkdl3xK"
+version = "cGaEo5dv"
 
 [option]
 optional = true
