--- a/mods/tt20.pw.toml
+++ b/mods/tt20.pw.toml
@@ -1,13 +1,13 @@
 name = "TT20 (TPS Fixer)"
-filename = "tt20-0.7.1+mc1.20.1.jar"
+filename = "tt20-0.7.2+mc1.20.1.jar"
 side = "server"
 
 [download]
-url = "https://cdn.modrinth.com/data/YS3ZignI/versions/W503kD70/tt20-0.7.1%2Bmc1.20.1.jar"
+url = "https://cdn.modrinth.com/data/YS3ZignI/versions/ahmZ3Yw2/tt20-0.7.2%2Bmc1.20.1.jar"
 hash-format = "sha1"
-hash = "0858d559f5fc572ee30a532dc575819ba0b815d2"
+hash = "84f369975386412ae0bb0b48ca65696cc370cf36"
 
 [update]
 [update.modrinth]
 mod-id = "YS3ZignI"
-version = "W503kD70"
+version = "ahmZ3Yw2"
